@@ -186,8 +186,13 @@ gperl_register_boxed (GType gtype,
 						         NULL);
 	}
 	boxed_info = boxed_info_new (gtype, package, wrapper_class);
+	/* We need to insert into info_by_package first because there might
+	 * otherwise be trouble if we overwrite an entry: inserting into
+	 * info_by_gtype frees the boxed_info of the overwritten entry, so that
+	 * boxed_info->package is no longer valid at this point.
+	 */
+	g_hash_table_insert (info_by_package, boxed_info->package, boxed_info);
 	g_hash_table_insert (info_by_gtype, (gpointer) gtype, boxed_info);
-	g_hash_table_insert (info_by_package, (gchar*)package, boxed_info);
 
 	/* GBoxed types are plain structures, so it would be really
 	 * surprising to find a boxed type that actually inherits another
